# telegram-messages-archiver

./: .envdbsampleforposgress  .envsample  .gitignore  README.md  docker-compose.yml  pyproject.toml
telegram_messages_archiver/cmd/: root.py
telegram_messages_archiver/models/: __init__.py  base.py  contact.py  file.py  message.py  web_page.py
telegram_messages_archiver/services/: dialog_manager.py  file_manager.py  message_manager.py  telegram_manager.py
